# hd2_macropad

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md  merge-bin.py  platformio.ini  sdkconfig.ESP32_3248S035C  sdkconfig.JC3248W535N  sdkconfig.LVGL-320-480  sdkconfig.LVGL-320-480.old  sounds.h
.github/: FUNDING.yml
.github/workflows/: main.yml
boards/: 320x480.json  ESP32_3248S035C.json  JC3248W535N.json
eez/: HD2 Macropad.eez-project  HD2 Macropad.eez-project-ui-state
eez/assets/sg/: desktop.ini
libraries/audio_player/: i2s_configuration.h  i2s_player.c  i2s_player.h  i2s_sdcard.h
libraries/ble_hid/: ble_controller.c  ble_controller.h  esp_hidd_prf_api.c  hid_device_le_prf.c  hidd_le_prf_int.h
libraries/eez-framework/src/eez/core/: assets.h  unit.cpp  value.cpp  value.h  value_types.h
libraries/eez-framework/src/eez/flow/: flow.cpp  flow.h  operations.cpp  private.cpp  private.h  queue.cpp  queue.h  watch_list.cpp  watch_list.h
libraries/eez-framework/src/eez/flow/components/: call_action.cpp  end.cpp
libraries/esp_tinyusb/: idf_component.yml
libraries/lvgl/src/extra/libs/fsdrv/: lv_fs_fatfs.c
partitions/: default_16MB.csv
sdcard/: README.md
sdcard/assets/sound/: _des.sfk
squareline/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py  Themes.slt
src/: DEMO_LVGL.c  configration.h  configuation.c  configuration.c  configuration.h  i2s_configuration.h  keymaps.c  keymaps.h  lv_conf.h  lv_conf_ESP32_3248S035C.h  main.c  main.h  sequences.c  sequences.h  sounds.h  stratagems.h  version.h
src/ble/: ble_controller.c  ble_controller.h
src/bm/: bm_controller.c  bm_controller.h
src/ui/: CMakeLists.txt  actions.c  actions.h  eez-flow.h  filelist.txt  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  ui_assignment.c  ui_assignment.h  ui_events.c  ui_events.h  ui_post.c  ui_post.h  ui_themes.c  ui_themes.h  vars.h
src/ui/images/: ui_image_1201.c  ui_image_1202.c  ui_image_1203.c  ui_image_3801.c  ui_image_3802.c  ui_image_3803.c  ui_image_ac1.c  ui_image_ac2.c  ui_image_ac3.c  ui_image_acs1.c  ui_image_acs2.c  ui_image_acs3.c  ui_image_amr1.c  ui_image_amr2.c  ui_image_amr3.c  ui_image_apm1.c  ui_image_apm2.c  ui_image_apm3.c  ui_image_arl1.c  ui_image_arl2.c  ui_image_arl3.c  ui_image_at1.c  ui_image_at2.c  ui_image_at3.c  ui_image_ate1.c  ui_image_ate2.c  ui_image_ate3.c  ui_image_atm1.c  ui_image_atm2.c  ui_image_atm3.c  ui_image_bfgl1.c  ui_image_bfgl2.c  ui_image_bfgl3.c  ui_image_bmk1.c  ui_image_bmk2.c  ui_image_bmk3.c  ui_image_bs1.c  ui_image_bs2.c  ui_image_bs3.c  ui_image_bsb1.c  (+802 more)
src/ui/screens/: ui_About.c  ui_Config.c  ui_Game.c  ui_Intro.c  ui_Setup.c
src/usb/: usb_controller.c  usb_controller.h
utils/: pack-assets.py  write-version.py
