SET(SOURCES screens/ui_Intro.c
    screens/ui_Setup.c
    screens/ui_Game.c
    screens/ui_Config.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_intro_png.c
    images/ui_img_sg_mg1_png.c
    images/ui_img_sg_hmg1_png.c
    images/ui_img_sg_sw1_png.c
    images/ui_img_sg_ac1_png.c
    images/ui_img_sg_amr1_png.c
    images/ui_img_sg_arl1_png.c
    images/ui_img_sg_c1_png.c
    images/ui_img_sg_eat1_png.c
    images/ui_img_sg_gl1_png.c
    images/ui_img_sg_rg1_png.c
    images/ui_img_sg_rr1_png.c
    images/ui_img_sg_spr1_png.c
    images/ui_img_sg_qc1_png.c
    images/ui_img_sg_lc1_png.c
    images/ui_img_sg_at1_png.c
    images/ui_img_sg_ft1_png.c
    images/ui_img_sg_ste1_png.c
    images/ui_img_sg_bsb1_png.c
    images/ui_img_sg_sgp1_png.c
    images/ui_img_sg_gd1_png.c
    images/ui_img_sg_gdb1_png.c
    images/ui_img_sg_gdr1_png.c
    images/ui_img_sg_sup1_png.c
    images/ui_img_sg_jp1_png.c
    images/ui_img_sg_pe1_png.c
    images/ui_img_sg_ee1_png.c
    images/ui_img_sg_mgs1_png.c
    images/ui_img_sg_gs1_png.c
    images/ui_img_sg_acs1_png.c
    images/ui_img_sg_hmge1_png.c
    images/ui_img_sg_tt1_png.c
    images/ui_img_sg_sgr1_png.c
    images/ui_img_sg_ms1_png.c
    images/ui_img_sg_rs1_png.c
    images/ui_img_sg_ems1_png.c
    images/ui_img_sg_apm1_png.c
    images/ui_img_sg_atm1_png.c
    images/ui_img_sg_im1_png.c
    images/ui_img_sg_1201_png.c
    images/ui_img_sg_3801_png.c
    images/ui_img_sg_ors1_png.c
    images/ui_img_sg_ogb1_png.c
    images/ui_img_sg_oas1_png.c
    images/ui_img_sg_ol1_png.c
    images/ui_img_sg_ops1_png.c
    images/ui_img_sg_owb1_png.c
    images/ui_img_sg_oes1_png.c
    images/ui_img_sg_onb1_png.c
    images/ui_img_sg_ogs1_png.c
    images/ui_img_sg_oss1_png.c
    images/ui_img_sg_e1101_png.c
    images/ui_img_sg_e5001_png.c
    images/ui_img_sg_ea1_png.c
    images/ui_img_sg_ecb1_png.c
    images/ui_img_sg_esr1_png.c
    images/ui_img_sg_ena1_png.c
    images/ui_img_sg_ess1_png.c
    images/ui_img_sg_rf1_png.c
    images/ui_img_sg_res1_png.c
    images/ui_img_sg_sos1_png.c
    images/ui_img_sg_er1_png.c
    images/ui_img_sg_1202_png.c
    images/ui_img_sg_3802_png.c
    images/ui_img_sg_ac2_png.c
    images/ui_img_sg_acs2_png.c
    images/ui_img_sg_amr2_png.c
    images/ui_img_sg_apm2_png.c
    images/ui_img_sg_arl2_png.c
    images/ui_img_sg_at2_png.c
    images/ui_img_sg_atm2_png.c
    images/ui_img_sg_bsb2_png.c
    images/ui_img_sg_c2_png.c
    images/ui_img_sg_dfv1_png.c
    images/ui_img_sg_dfv2_png.c
    images/ui_img_sg_e1102_png.c
    images/ui_img_sg_e5002_png.c
    images/ui_img_sg_ea2_png.c
    images/ui_img_sg_eat2_png.c
    images/ui_img_sg_ecb2_png.c
    images/ui_img_sg_ee2_png.c
    images/ui_img_sg_ems2_png.c
    images/ui_img_sg_ena2_png.c
    images/ui_img_sg_er2_png.c
    images/ui_img_sg_esr2_png.c
    images/ui_img_sg_ess2_png.c
    images/ui_img_sg_ft2_png.c
    images/ui_img_sg_gd2_png.c
    images/ui_img_sg_gdb2_png.c
    images/ui_img_sg_gdr2_png.c
    images/ui_img_sg_gl2_png.c
    images/ui_img_sg_gs2_png.c
    images/ui_img_sg_hb1_png.c
    images/ui_img_sg_hb2_png.c
    images/ui_img_sg_hbd1_png.c
    images/ui_img_sg_hbd2_png.c
    images/ui_img_sg_hmg2_png.c
    images/ui_img_sg_hmge2_png.c
    images/ui_img_sg_im2_png.c
    images/ui_img_sg_jp2_png.c
    images/ui_img_sg_lc2_png.c
    images/ui_img_sg_mg2_png.c
    images/ui_img_sg_mgs2_png.c
    images/ui_img_sg_ms2_png.c
    images/ui_img_sg_oas2_png.c
    images/ui_img_sg_oes2_png.c
    images/ui_img_sg_ogb2_png.c
    images/ui_img_sg_ogs2_png.c
    images/ui_img_sg_oif1_png.c
    images/ui_img_sg_oif2_png.c
    images/ui_img_sg_ol2_png.c
    images/ui_img_sg_onb2_png.c
    images/ui_img_sg_ops2_png.c
    images/ui_img_sg_ors2_png.c
    images/ui_img_sg_oss2_png.c
    images/ui_img_sg_owb2_png.c
    images/ui_img_sg_pd1_png.c
    images/ui_img_sg_pd2_png.c
    images/ui_img_sg_pe2_png.c
    images/ui_img_sg_qc2_png.c
    images/ui_img_sg_res2_png.c
    images/ui_img_sg_rf2_png.c
    images/ui_img_sg_rg2_png.c
    images/ui_img_sg_rr2_png.c
    images/ui_img_sg_rs2_png.c
    images/ui_img_sg_seaf1_png.c
    images/ui_img_sg_seaf2_png.c
    images/ui_img_sg_sef1_png.c
    images/ui_img_sg_sef2_png.c
    images/ui_img_sg_sgp2_png.c
    images/ui_img_sg_sgr2_png.c
    images/ui_img_sg_sos2_png.c
    images/ui_img_sg_sp1_png.c
    images/ui_img_sg_sp2_png.c
    images/ui_img_sg_spr2_png.c
    images/ui_img_sg_ste2_png.c
    images/ui_img_sg_sup2_png.c
    images/ui_img_sg_sw2_png.c
    images/ui_img_sg_td1_png.c
    images/ui_img_sg_td2_png.c
    images/ui_img_sg_tt2_png.c
    images/ui_img_sg_ud1_png.c
    images/ui_img_sg_ud2_png.c)

add_library(ui ${SOURCES})
